<resources>
    <string name="app_name">NewsCheck</string>
    <string name="topHeadlines">Top Headlines</string>
    <string name="noResult">No result !</string>
    <string name="news">News</string>
    <string name="placeHolder">PlaceHolder</string>
    <string name="nav_drawer_open">Open the navigation drawer</string>
    <string name="nav_drawer_close">Close the navigation drawer</string>
    <string name="userIconDesc">User icon</string>
    <string name="unknownUser">Unknown user</string>
    <string name="login"><u>Login or create account</u></string>
    <string name="loginFailure">login failed !</string>
    <string name="logout">Logout</string>
    <string name="accountDataLoadFailed">Failed to load the account data</string>
    <string name="authorDefault">Unknown author</string>
    <string name="commentsLoadingFailed">Failed to load the comments</string>
    <string name="newComment">New comment</string>
    <string name="typeComment">You can type your comment here</string>
    <string name="sendComment">Send your comment</string>
    <string name="ErrorSendingComment">We were unable to send your comment</string>
    <string name="CommentSent">Your comment was successfully sent</string>
    <string name="ratingSent">Rating sent</string>
    <string name="ratingError">Failed to send your comment</string>
    <string name="respond">respond</string>
    <string name="needToLogin">You need to login first</string>
    <string name="verifyAccount">Verify your account</string>
    <string name="needToStay">You need to look at the article a bit longer before commenting</string>
    <string name="openArticle">Open this article</string>
    <string name="articlesLoadingFailure">Failed to load articles</string>
    <string name="verificationExplain">To verify your account, and have your comments be more trusted, you can use the above button to send us a picture of any document that can prove your status. These are securely sent, and will be deleted after manual review.</string>
    <string name="alreadyVerified">Your account is already verified</string>
    <string name="alreadySubmitted">Your account is being verified</string>
</resources>