<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/accountParametersIcon"
            android:contentDescription="@string/userIconDesc"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <Button
            android:layout_margin="20dp"
            android:text="@string/logout"
            android:id="@+id/logoutButton"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/accountParametersIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="20dp"
            android:text="@string/verifyAccount"
            android:id="@+id/requestVerificationButton"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/requestVerificationButton"
            android:layout_margin="20dp"
            android:text="@string/verificationExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>