<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorAccent"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:padding="16dp">

    <ImageView
        android:id="@+id/accountPicture"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/userIconDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:paddingTop="8dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/accountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknownUser"/>

</LinearLayout>